k8s/OPA-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
      - name: opa
        image: openpolicyagent/opa:latest
        args:
          - "run"
          - "--server"
        ports:
          - containerPort: 8181
        volumeMounts:
          - mountPath: /policy
            name: opa-policy
      volumes:
        - name: opa-policy
          configMap:
            name: opa-policy
---
apiVersion: v1
kind: Service
metadata:
  name: opa
spec:
  ports:
    - port: 8181
      targetPort: 8181
  selector:
    app: opa
