k8s/kitchen-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchen-service
  template:
    metadata:
      labels:
        app: kitchen-service
    spec:
      containers:
        - name: kitchen-service
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"   # Ensure CPU requests are set for CPU-based scaling
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"   
---
apiVersion: v1
kind: Service
metadata:
  name: kitchen-service
spec:
  selector:
    app: kitchen-service
  ports:
    - port: 80
      targetPort: 80
