k8s/tracker-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-service
  template:
    metadata:
      labels:
        app: tracker-service
    spec:
      containers:
        - name: tracker-service
          image: tracker-service
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: tracker-service
spec:
  selector:
    app: tracker-service
  ports:
    - port: 8082
      targetPort: 8082
